--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "TrustworthyHealthcareInitiative",
     "version": "0.1.1",
+    "private": true,
     "dependencies": {},
     "devDependencies": {
         "assemble": "0.4.42",
-        "assemble-contrib-permalinks": "0.3.6",
         "assemble-contrib-sitemap": "0.2.2",
+        "assemble-middleware-permalinks": "0.5.2",
         "bower": "1.4.1",
         "grunt": "0.4.5",
         "grunt-autoprefixer": "3.0.0",
@@ -21,7 +22,6 @@
         "grunt-contrib-imagemin": "0.9.4",
         "grunt-contrib-jshint": "0.11.2",
         "grunt-contrib-uglify": "0.9.1",
-        "grunt-bower-install": "1.6.0",
         "grunt-contrib-watch": "0.6.1",
         "grunt-htmlrefs": "0.5.0",
         "grunt-mocha": "0.4.12",
@@ -29,6 +29,7 @@
         "grunt-rev": "0.1.0",
         "grunt-svgmin": "2.0.1",
         "grunt-usemin": "3.0.0",
+        "grunt-wiredep": "2.0.0",
         "jshint-stylish": "1.0.2",
         "load-grunt-tasks": "3.1.0",
         "time-grunt": "1.2.0"
@@ -37,6 +38,6 @@
         "test": "grunt test"
     },
     "engines": {
-        "node": ">=0.10.0"
+        "node": ">=0.10.25"
     }
 }
