--- a/package.json
+++ b/package.json
@@ -7,32 +7,33 @@
         "assemble": "0.4.42",
         "assemble-contrib-sitemap": "0.2.2",
         "assemble-middleware-permalinks": "0.5.2",
-        "bower": "1.4.1",
-        "grunt": "0.4.5",
-        "grunt-autoprefixer": "3.0.0",
-        "grunt-aws-s3": "0.13.0",
-        "grunt-cli": "0.1.13",
-        "grunt-concurrent": "1.0.0",
-        "grunt-contrib-clean": "0.6.0",
-        "grunt-contrib-concat": "0.5.1",
-        "grunt-contrib-connect": "0.10.1",
-        "grunt-contrib-copy": "0.8.0",
-        "grunt-contrib-cssmin": "0.12.3",
-        "grunt-contrib-htmlmin": "0.4.0",
-        "grunt-contrib-imagemin": "0.9.4",
-        "grunt-contrib-jshint": "0.11.2",
-        "grunt-contrib-uglify": "0.9.1",
-        "grunt-contrib-watch": "0.6.1",
-        "grunt-htmlrefs": "0.5.0",
-        "grunt-mocha": "0.4.12",
-        "grunt-newer": "1.1.0",
-        "grunt-rev": "0.1.0",
-        "grunt-svgmin": "2.0.1",
-        "grunt-usemin": "3.0.0",
-        "grunt-wiredep": "2.0.0",
-        "jshint-stylish": "1.0.2",
-        "load-grunt-tasks": "3.1.0",
-        "time-grunt": "1.2.0"
+        "bower": "latest",
+        "grunt": "latest",
+        "grunt-autoprefixer": "latest",
+        "grunt-aws-s3": "latest",
+        "grunt-cli": "latest",
+        "grunt-concurrent": "latest",
+        "grunt-contrib-clean": "latest",
+        "grunt-contrib-concat": "latest",
+        "grunt-contrib-connect": "latest",
+        "grunt-contrib-copy": "latest",
+        "grunt-contrib-cssmin": "latest",
+        "grunt-contrib-htmlmin": "latest",
+        "grunt-contrib-imagemin": "latest",
+        "grunt-contrib-jshint": "latest",
+        "grunt-contrib-uglify": "latest",
+        "grunt-contrib-watch": "latest",
+        "grunt-htmlrefs": "latest",
+        "grunt-mocha": "latest",
+        "grunt-newer": "latest",
+        "grunt-rev": "latest",
+        "grunt-svgmin": "latest",
+        "grunt-usemin": "latest",
+        "grunt-wiredep": "latest",
+        "jshint-stylish": "latest",
+        "load-grunt-tasks": "latest",
+        "serve-static": "latest",
+        "time-grunt": "latest"
     },
     "scripts": {
         "test": "grunt test"
